# Edge-PDL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dev_info.cpp  dev_info.h  fw implementation.txt  global_defs.cpp  global_defs.h  idf_component.yml  main.cpp
app/cloud_comms/: cloud_commands.cpp
app/data_logging/: data_logging.cpp  data_logging.h
app/heartbeat/: heartbeat.cpp  heartbeat.h
app/input_monitoring/: input_monitoring.cpp  input_monitoring.h
app/lora_mesh/: cloud_mesh.c  cloud_mesh.h  lora_mesh.c  lora_mesh.cpp  lora_mesh.h  lora_mesh_cfg.h  mesh_cloud.c  mesh_cloud.h  mesh_cloud_cfg.h  mesh_commands.c  mesh_commands.h  mesh_comms.c  mesh_comms.h  mesh_route.c  mesh_route.h  mesh_update.c  mesh_update.h
cmd_router/: cmd_router.c
config/: cloud_comms_cfg.h  edge_payload_cfg.h  enmtr_manager_cfg.h  enmtr_msp430_cfg.h  modem_manager_cfg.h  web_server_cfg.h
res/web/: index.html  script.js  style.css
src/: CMakeLists.txt  general_info.cpp  general_info.h  global_defs.cpp  global_defs.h  idf_component.yml  main.cpp
src/app/cloud_comms/: cloud_commands.cpp
src/app/data_logging/: data_logging.cpp  data_logging.h
src/app/heartbeat/: heartbeat.cpp  heartbeat.h
src/app/input_monitoring/: input_monitoring.cpp  input_monitoring.h
src/app/lora_mesh/: lora_mesh.cpp  lora_mesh.h
src/config/: cloud_comms_cfg.h  edge_payload_cfg.h  enmtr_manager_cfg.h  enmtr_msp430_cfg.h  modem_manager_cfg.h  web_server_cfg.h
src/general/app/cloud_comms/: cloud_comms.cpp  cloud_comms.h  cloud_event.cpp  cloud_monitor.cpp  cloud_net.cpp  cloud_net.h  cloud_status.cpp  cloud_sync.cpp  cloud_update.cpp
src/general/app/enmtr_manager/: enmtr_manager.cpp  enmtr_manager.h
src/general/app/modem_manager/: modem_manager.cpp  modem_manager.h  modem_pdp.cpp  modem_pdp.h
src/general/app/wifi_manager/: blufi_setup.cpp  blufi_setup.h  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h
src/general/lib/coap/: coap_client.c  coap_client.h
src/general/lib/crc/: crc16.c  crc16.h  crc16_cfg.h
src/general/lib/device_id/: device_id.c  device_id.h
src/general/lib/dtls/: dtls_client.c  dtls_client.h  dtls_crypto.c  dtls_crypto.h  dtls_defs.h
src/general/lib/edge_payload/: edge_payload.c  edge_payload.h  edge_payload_defs.h
src/general/lib/enmtr/: enmtr.cpp  enmtr.h  enmtr_cfg.h  msp430.cpp  msp430.h
src/general/lib/logprint/: logprint.c  logprint.h
src/general/lib/modem/: modem.cpp  modem.h  modem_cfg.h  quectel.cpp  quectel.h  quectel_defs.h  quectel_pdp.cpp
src/general/lib/system_flags/: system_flags.c  system_flags.h
src/general/partitions/: 16MB.csv  4MB.csv  8MB.csv
src/res/web/: index.html  script.js  style.css
